Fixed Edge showing a horizontal scrollbar when accessing trees by keyboard

--- a/WebExtension/stylesheet.scss
+++ b/WebExtension/stylesheet.scss
@@ -175,8 +175,8 @@ $folderIconSpace: 18px;
 		position: absolute;
 		z-index: 1;
 		top: 100%;
-		left: 50%;
-		transform: translateX(-50%);
+		right: 50%;
+		transform: translateX(50%);
 		border: 1px solid black;
 		background: yellow;
 		font-size: 10px;
